--- a/src/zc/extjs/CHANGES.txt
+++ b/src/zc/extjs/CHANGES.txt
@@ -16,6 +16,13 @@ Future work
   results as people refine searches.
 
 
+0.5.0 (2008-06-19)
+==================
+
+- FormServers can now create browsers on their own.
+
+- System errors from ajax methods now have json bodies.
+
 0.4.0 (2008-06-18)
 ==================
 
