--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -6,3 +6,4 @@ unreleased
 ==========
 
 - Removed dependency on ``zc.extjsresource``.
+- Added a `postStartup` hook for widgets that is called after form startup.
