--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -7,3 +7,5 @@ unreleased
 
 - Removed dependency on ``zc.extjsresource``.
 - Added a `postStartup` hook for widgets that is called after form startup.
+- Added a CKEditor widget as an optional replacement for the Dojo WYSIWYG
+  editor widget.
