--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -2,6 +2,13 @@
 Changes
 =======
 
+
+0.8.0 (2010-02-17)
+==================
+
+- Support for List quick content type
+
+
 0.7.0 (2009-11-24)
 ==================
 
