- update CHANGES.txt

--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -3,6 +3,12 @@ Changes
 =======
 
 
+0.9.0 (2010-03-29)
+==================
+
+- Cosmetic fixes (eg., scrollbar cleanup)
+
+
 0.8.0 (2010-02-17)
 ==================
 
