--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -15,6 +15,9 @@ Changes
   widgets can easily be validated on the client-side by calling
   the form's validate method.
 
+- Reinstate default automatic form startup (added back in 0.16.2), and add
+  an argument `startup` to `build_form` to control the behavior.
+
 0.17.0 (2010-07-12)
 ===================
 
