--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -2,6 +2,12 @@
 Changes
 =======
 
+0.22.0 (2011-1-20)
+==================
+
+- Fix build_form to work with the left_fields format that zc.ajaxform
+  generates.
+
 0.21.0 (2010-12-02)
 ===================
 
