--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -2,6 +2,10 @@
 Changes
 =======
 
+0.30.0 (2011-12-19)
+===================
+
+- Add a class name to the RichTextDisplay widget
 
 0.29.0 (2011-11-21)
 ===================
