test with dojo 1.8.1 and ckeditor 3.6.5

--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -2,6 +2,11 @@
 Changes
 =======
 
+1.0.0 (2012-11-30)
+==================
+
+- Make dojoform AMD compliant.
+
 0.34.0 (2012-06-19)
 ===================
 
